[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"

[workspace]
resolver = "2"
members = [
    "node",
    "pallets/parachain-staking",
    "pallets/vesting-manager",
    "pallets/orml-currencies-allowance-extension",
    "pallets/orml-tokens-management-extension",
    "pallets/treasury-buyout-extension",
    "runtime/common",
    "runtime/amplitude",
    "runtime/foucoco",
    "runtime/pendulum",
    #"runtime/integration-tests",
    "chain-extensions/token",
    "chain-extensions/price",
    "chain-extensions/common",
]

[workspace.dependencies]
cfg-if = "1.0.0"
clap = { version = "4.0.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
futures = { version = "0.3.30", default-features = false }
hex-literal = { version = "0.3.4" }
jsonrpsee = { version = "0.16.0", default-features = false }
log = { version = "0.4.22", default-features = false }
parity-scale-codec = { version = "3.1.5", default-features = false }
paste = { version = "1.0.14", default-features = false }
scale-info = { version = "2.0", default-features = false }
serde = { version = "1.0.136", default-features = false }
serde_derive = { version = "1.0.117" }
serde_json = { version = "1.0.120", default-features = false }
sha2 = { version = "0.8.2", default-features = false }
smallvec = "1.9.0"

# Substrate
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }

cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-client-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot-sdk", package = "staging-kusama-runtime", default-features = false, branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }

parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", package = "staging-parachain-info", default-features = false, branch = "release-polkadot-v1.6.0" }
staging-parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }

sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
xcm = { git = "https://github.com/paritytech/polkadot-sdk", package = "staging-xcm", default-features = false, branch = "release-polkadot-v1.6.0" }
staging-xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", package = "staging-xcm-executor", default-features = false, branch = "release-polkadot-v1.6.0" }

frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-bounties = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-child-bounties = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
rococo-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }

polkadot-parachain = { git = "https://github.com/paritytech/polkadot-sdk", package = "polkadot-parachain-primitives", default-features = false, branch = "release-polkadot-v1.6.0" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
staging-xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", package = "staging-xcm-builder", branch = "release-polkadot-v1.6.0" }

polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
staging-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }

xcm-emulator = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }

substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }
substrate-wasm-builder = { git = "https://github.com/paritytech//polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }

# Spacewalk
module-oracle-rpc-runtime-api = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
module-issue-rpc-runtime-api = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
module-redeem-rpc-runtime-api = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
module-replace-rpc-runtime-api = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
module-vault-registry-rpc-runtime-api = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
module-issue-rpc = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
module-oracle-rpc = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
module-redeem-rpc = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
module-replace-rpc = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
module-vault-registry-rpc = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }

spacewalk-primitives = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
clients-info = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
currency = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
security = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
staking = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
oracle = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
stellar-relay = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
fee = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
vault-registry = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
redeem = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
issue = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
nomination = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
replace = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
pooled-rewards = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }
reward-distribution = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev = "cf97142d29ce666a6a2587b8de182ddef0154a14" }

# Zenlink
zenlink-protocol = { git = "https://github.com/pendulum-chain/Zenlink-DEX-Module", default-features = false, branch = "release-polkadot-v1.6.0" }
zenlink-protocol-rpc = { git = "https://github.com/pendulum-chain/Zenlink-DEX-Module", default-features = false, branch = "release-polkadot-v1.6.0" }
zenlink-protocol-runtime-api = { git = "https://github.com/pendulum-chain/Zenlink-DEX-Module", default-features = false, branch = "release-polkadot-v1.6.0" }


# Orml dependencies
orml-asset-registry = { git = "https://github.com/pendulum-chain/open-runtime-module-library.git", default-features = false, branch = "polkadot-v1.6.0" }
orml-currencies = { git = "https://github.com/pendulum-chain/open-runtime-module-library.git", default-features = false, branch = "polkadot-v1.6.0" }
orml-oracle = { git = "https://github.com/pendulum-chain/open-runtime-module-library.git", default-features = false, branch = "polkadot-v1.6.0" }
orml-tokens = { git = "https://github.com/pendulum-chain/open-runtime-module-library.git", default-features = false, branch = "polkadot-v1.6.0" }
orml-traits = { git = "https://github.com/pendulum-chain/open-runtime-module-library.git", default-features = false, branch = "polkadot-v1.6.0" }
orml-xcm-support = { git = "https://github.com/pendulum-chain/open-runtime-module-library.git", default-features = false, branch = "polkadot-v1.6.0" }
orml-xcm = { git = "https://github.com/pendulum-chain/open-runtime-module-library.git", default-features = false, branch = "polkadot-v1.6.0" }
orml-xtokens = { git = "https://github.com/pendulum-chain/open-runtime-module-library.git", default-features = false, branch = "polkadot-v1.6.0" }

# DIA
dia-oracle = { git = "https://github.com/pendulum-chain/oracle-pallet", default-features = false, branch = "polkadot-v1.6.0" }
dia-oracle-runtime-api = { git = "https://github.com/pendulum-chain/oracle-pallet", default-features = false, branch = "polkadot-v1.6.0" }

# Bifrost
bifrost-farming = { git = "https://github.com/pendulum-chain/bifrost", default-features = false, branch = "polkadot-v1.6.0" }
bifrost-farming-rpc = { git = "https://github.com/pendulum-chain/bifrost", default-features = false, branch = "polkadot-v1.6.0" }
bifrost-farming-rpc-runtime-api = { git = "https://github.com/pendulum-chain/bifrost", default-features = false, branch = "polkadot-v1.6.0" }



# Disabled integration tests dependencies
#polkadot-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
#polkadot-runtime-constants = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
#asset-hub-polkadot-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
#asset-hub-kusama-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
#integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
#emulated-integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.6.0" }

# TODO do we still need to do this at 1.6.0?
# need this because of bifrost farming dependency in runtime
# bifrost farming uses different orml-traits for orml-currencies
[patch."https://github.com/pendulum-chain/open-runtime-module-library.git"]
orml-traits = { git = "https://github.com/pendulum-chain//open-runtime-module-library.git", branch = "polkadot-v1.6.0" }
orml-tokens = { git = "https://github.com/pendulum-chain//open-runtime-module-library.git", branch = "polkadot-v1.6.0" }


[patch."https://github.com/paritytech/polkadot-sdk"]
cumulus-pallet-parachain-system = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-primitives-core = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-pallet-aura-ext = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-pallet-dmp-queue = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-pallet-xcm = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-primitives-aura = { git = "https://github.com/pendulum-chain/polkadot-sdk",  branch = "transfer-assets-fix" }
cumulus-primitives-timestamp = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-primitives-utility = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-client-cli = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-client-consensus-aura = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-client-consensus-common = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-client-consensus-proposer = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-client-collator = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-client-network = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-client-parachain-inherent = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-client-service = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-relay-chain-interface = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
frame-benchmarking = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
frame-benchmarking-cli = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
frame-system = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
frame-support = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
kusama-runtime = { git = "https://github.com/pendulum-chain/polkadot-sdk", package = "staging-kusama-runtime", branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-contracts = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-treasury = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-vesting = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
parachains-common = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
staging-parachain-info = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-api = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-arithmetic = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-blockchain = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-consensus-aura = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-core = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-io = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-runtime = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-tracing = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-weights = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-staking = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-std = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
staging-xcm-executor = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
frame-executive = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
frame-metadata-hash-extension = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
frame-system-benchmarking = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
frame-system-rpc-runtime-api = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
frame-try-runtime = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-assets = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-aura = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-authorship = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-bounties = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-child-bounties = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-collective = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-democracy = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-identity = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-message-queue = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-multisig = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-preimage = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-proxy = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-scheduler = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-session = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-staking = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-sudo = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-timestamp = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-transaction-payment = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-utility = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-xcm = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
polkadot-core-primitives = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
polkadot-runtime-parachains = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
polkadot-primitives = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-block-builder = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-genesis-builder = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-inherents = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-offchain = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-session = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
rococo-runtime = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-storage = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-transaction-pool = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-version = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
pallet-transaction-payment-rpc = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-basic-authorship = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-chain-spec = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-cli = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-client-api = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-consensus = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-consensus-manual-seal = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-executor = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-network = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-network-sync = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-rpc = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-service = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-sysinfo = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-telemetry = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-tracing = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-transaction-pool = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-transaction-pool-api = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sc-offchain = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-keystore = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
sp-timestamp = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
substrate-frame-rpc-system = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
substrate-prometheus-endpoint = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
try-runtime-cli = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
polkadot-parachain = { git = "https://github.com/pendulum-chain/polkadot-sdk", package = "polkadot-parachain-primitives", branch = "transfer-assets-fix" }
polkadot-runtime-common = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
staging-xcm-builder = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
polkadot-cli = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
polkadot-service = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
staging-xcm = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
xcm-emulator = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
xcm-simulator = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
substrate-build-script-utils = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
substrate-wasm-builder = { git = "https://github.com/pendulum-chain/polkadot-sdk", branch = "transfer-assets-fix" }
